// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TableHead /> ref should work 1`] = `
.c0 {
  box-sizing: border-box;
}

<thead
  class="poodle-box c0 poodle-table-head c1 c1"
>
  <tr>
    <td>
      Table
    </td>
  </tr>
</thead>
`;

exports[`<TableHead /> should render Box props correctly 1`] = `
.c0 {
  box-sizing: border-box;
}

.c2 {
  margin-top: 20px;
}

<table>
  <thead
    class="poodle-box c0 poodle-table-head c1 c2"
    id="id"
  >
    <tr>
      <td>
        Table
      </td>
    </tr>
  </thead>
</table>
`;

exports[`<TableHead /> should render TableHead correctly 1`] = `
.c0 {
  box-sizing: border-box;
}

<table>
  <thead
    class="poodle-box c0 poodle-table-head c1 c1"
  >
    <tr>
      <td>
        Table
      </td>
    </tr>
  </thead>
</table>
`;

exports[`<TableHead /> should send context correctly 1`] = `
.c0 {
  box-sizing: border-box;
}

<table>
  <thead
    class="poodle-box c0 poodle-table-head c1 c1"
  >
    <tr>
      <td>
        {"level":"head"}
      </td>
    </tr>
  </thead>
</table>
`;

exports[`<TableHead /> theming should disable classes 1`] = `
.c0 {
  box-sizing: border-box;
}

<table>
  <thead
    class="poodle-box c0 poodle-table-head c1"
  >
    <tr>
      <td>
        Table
      </td>
    </tr>
  </thead>
</table>
`;

exports[`<TableHead /> theming should extend size styles 1`] = `
.c0 {
  box-sizing: border-box;
}

.c4 {
  width: 100%;
  border-spacing: 0;
  border-collapse: collapse;
  text-align: left;
}

.c7 {
  height: 100px;
}

<div
  class="poodle-box c0 poodle-table c1 c2"
>
  <table
    class="poodle-box c0 poodle-table__table c4 c2"
  >
    <thead
      class="poodle-box c0 poodle-table-head c7 c2"
    >
      <tr>
        <td>
          Table
        </td>
      </tr>
    </thead>
  </table>
</div>
`;

exports[`<TableHead /> theming should extend size styles with mode 1`] = `
.c0 {
  box-sizing: border-box;
}

.c4 {
  width: 100%;
  border-spacing: 0;
  border-collapse: collapse;
  text-align: left;
}

.c7 {
  height: 100px;
  height: 110px;
}

<div
  class="poodle-box c0 poodle-table c1 c2"
>
  <table
    class="poodle-box c0 poodle-table__table c4 c2"
  >
    <thead
      class="poodle-box c0 poodle-table-head c7 c2"
    >
      <tr>
        <td>
          Table
        </td>
      </tr>
    </thead>
  </table>
</div>
`;

exports[`<TableHead /> theming should extend styles in global 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  margin-top: 10px;
  letter-spacing: 250px;
  top: 0;
  text-indent: 1px;
}

<table>
  <thead
    class="poodle-box c0 poodle-table-head c1 c2"
  >
    <tr>
      <td>
        Table
      </td>
    </tr>
  </thead>
</table>
`;

exports[`<TableHead /> theming should extend styles in local 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  margin-top: 10px;
  letter-spacing: 250px;
  top: 0;
  text-indent: 1px;
}

<table>
  <thead
    class="poodle-box c0 poodle-table-head c1 c2"
  >
    <tr>
      <td>
        Table
      </td>
    </tr>
  </thead>
</table>
`;

exports[`<TableHead /> theming should override classes 1`] = `
.c0 {
  box-sizing: border-box;
}

<table>
  <thead
    class="poodle-box c0 poodle-table-head morning c1"
  >
    <tr>
      <td>
        Table
      </td>
    </tr>
  </thead>
</table>
`;

exports[`<TableHead /> theming should override styles 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  margin-top: 50px;
}

<table>
  <thead
    class="poodle-box c0 poodle-table-head c1 c2"
  >
    <tr>
      <td>
        Table
      </td>
    </tr>
  </thead>
</table>
`;

exports[`<TableHead /> theming should render with default props correctly 1`] = `
.c0 {
  box-sizing: border-box;
}

<table>
  <thead
    class="poodle-box c0 poodle-table-head c1 hello c1"
    id="id"
  >
    <tr>
      <td>
        Table
      </td>
    </tr>
  </thead>
</table>
`;
